2005-08-08  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_inotify.c: (gam_inotify_event_new),
	(gam_inotify_event_pair_with),
	(gam_inotify_event_add_microseconds), (gam_inotify_event_ready),
	(gam_inotify_process_event), (gam_inotify_pair_moves),
	(gam_inotify_process_internal), (gam_inotify_process_event_queue),
	(gam_inotify_read_handler), (gam_inotify_init), (g_timeval_eq):
	Implemented pairing of MOVED_FROM and MOVED_TO events. Waiting for gamin
	to support this event, but it will be trivial to hook up in inotify now.
	* server/local_inotify_syscalls.h: Added ia64 and s390 system call
	numbers. Added a couple aliases for ppc.
	* tests/testing.c: (processCommand): Added "move" command.

Mon Aug  8 23:15:45 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* server/local_inotify_syscalls.h: applied patch fixing compilation
	  on ppc, alpha and sparc, fixes bug #312934 though incomplete list

2005-08-08  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_inotify.c: (gam_inotify_mask_to_gam_file_event),
	(gam_inotify_mask_to_gam_dir_event),
	(gam_inotify_process_event_queue), (gam_inotify_remove_all_for): Add some
	comments and refactor some code.

2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_conf.c: (gam_conf_read): Fix build.
	* server/gam_inotify.c: (gam_inotify_process_event_queue),
	(gam_inotify_read_handler), (gam_inotify_init), (g_timeval_lt),
	(t_timeval_eq): Process the inotify event queue in a timer. Add GTimeVal
	comparision predicates. This is the beginning of pairing move events
	together.

2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_connection.c: (gam_connection_new): Change event queue flush
	to 100 ms.

2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* doc/config.html:
	* doc/gamin.html: Update documentation

2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_poll.c: (node_add_subscription),
	(node_remove_subscription), (gam_poll_delist_node),